--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,10 @@ h1{
 .book-info button{
     width: 80%;
 }
+
+select{
+    width: 80%;
+    padding: 1rem;
+    margin: 1rem 0;
+    font-size: 1.5rem;
+}
