--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ h1{
     color: #fff;
     cursor: pointer;
 }
-.populateBook{
+.library{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,8 +115,8 @@ h1{
 }
 .book-info{
     margin: 1rem;
-    width: 25%;
-    height: 15rem;
+    width: 30%;
+    height: 20rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,4 +143,23 @@ select{
     padding: 1rem;
     margin: 1rem 0;
     font-size: 1.5rem;
+}
+
+label{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #eee;
+
+    
+}
+
+.library button{ 
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.library .toggle-read-btn{
+    background-color: green;
 }
